# theme-color-extraction

./: .gitignore  App.tsx  README.md  colorUtils.js  color_utils.py  index.html  index.js  main.js  main.py  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  types.ts  vite.config.ts
.github/workflows/: deploy.yml
components/: ImageCard.tsx  SettingsPanel.tsx
utils/: colorUtils.ts
