[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theme-color-extraction-cli"
version = "1.0.0"
description = "Extract color palette from images using Python CLI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Domdkw"}
]
keywords = ["color", "palette", "extraction", "image", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Pillow>=10.0.0",
    "mutagen>=1.47.0",
]

[project.scripts]
extract-colors = "main:main"

[project.urls]
Homepage = "https://github.com/Domdkw/theme-color-extraction"
Repository = "https://github.com/Domdkw/theme-color-extraction"
